[gd_scene load_steps=3 format=3 uid="uid://dybmo7wx7pbbx"]

[ext_resource type="Script" path="res://Scripts/NounBox.gd" id="1_405aq"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jpsk2"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape_scale = Vector3(100, 30, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
radial_velocity_min = 100.0
radial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)

[node name="NounBox" type="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_405aq")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
button_mask = 3
text = "Placeholder"

[node name="CorrectAnswerLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 80.0
offset_top = -23.0
offset_right = 120.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(100, 28)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_jpsk2")
preprocess = 1.4
explosiveness = 0.8
randomness = 1.0
trail_enabled = true
trail_lifetime = 0.01

[connection signal="gui_input" from="Control/CenterContainer/Button" to="." method="_on_button_gui_input"]
[connection signal="pressed" from="Control/CenterContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
